force-app/main/default/objects/TaskSummary__c/TaskSummary__c.object-meta.xml
<CustomObject>
    <label>Task Summary</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Task Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>