force-app/main/default/objects/TaskSummary__c/fields/TotalAdjustments__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustments__c</fullName>
    <label>Total Adjustments</label>
    <summarizedField>TaskRoleSummary__c.TotalAdjustments__c</summarizedField>
    <summaryForeignKey>TaskRoleSummary__c.SummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>