force-app/main/default/objects/TaskSummary__c/fields/TotalCalculatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalCalculatedDuration__c</fullName>
    <label>Total Calculated Duration</label>
    <summarizedField>TaskRoleSummary__c.TotalCalculatedDuration__c</summarizedField>
    <summaryForeignKey>TaskRoleSummary__c.SummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>