force-app/main/default/objects/TaskSummary__c/fields/TotalEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedDuration__c</fullName>
    <label>Total Estimated Duration</label>
    <summarizedField>TaskRoleSummary__c.TotalEstimatedDuration__c</summarizedField>
    <summaryForeignKey>TaskRoleSummary__c.SummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>