force-app/main/default/objects/TaskSummary__c/fields/TotalLevelAdjustments__c.field-meta.xml
<CustomField>
    <fullName>TotalLevelAdjustments__c</fullName>
    <label>Total Level Adjustments</label>
    <summarizedField>TaskRoleSummary__c.LevelAdjustment__c</summarizedField>
    <summaryForeignKey>TaskRoleSummary__c.SummaryId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>